<resources>
    <string name="app_name">Click It!</string>
    <string name="high_score_tv">0</string>
    <string name="score_tv">0</string>
    <string name="time_tv">0.00</string>

    <string name="menuWhite">White</string>
    <string name="menuGreen">Green</string>
    <string name="menuRed">Red</string>
    <string name="menuBlue">Blue</string>
    <string name="menuYellow">Yellow</string>
    <string name="menuDefault">Default</string>
</resources>
